# factorymind

./: README.md  pyproject.toml
backend/: system_prompt.md
data/: sample_queries.csv
results/: results_20260418_002133.json  scored_20260418_194042.json  scored_v2_20260418_194715.json
scripts/: bulk_test.py  score_results.py
