[project]
name = "factorymind"
version = "0.1.0"
description = "Industrial Fault Diagnosis AI — powered by Ollama, zero cost"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "braintrust",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]